--- a/polybar.liquid
+++ b/polybar.liquid
@@ -1,11 +1,17 @@
 {% for tag in workspace.tags %}
 
-%{T1}
-{% if tag.mine %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}%{F#C6AAE8}  %{F-}%{A}
-{% elsif tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}%{F#C6AAE8}  %{F-}%{A}
-{% elsif tag.busy %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}%{F#DFDEF1}  %{F-}%{A}
-{% else tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}%{F#DFDEF1}  %{F-}%{A}
+{% if tag.mine %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+%{F#FFFFFF}%{B#4A433D} {{tag.name}} %{B-}%{F-}
+%{A}
+{% elsif tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+%{F#FFFFFF}%{B#181915} {{tag.name}} %{B-}%{F-}
+%{A}
+{% elsif tag.busy %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+%{F#FFFFFF}%{B#272822} {{tag.name}} %{B-}%{F-}
+%{A}
+{% else tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+%{F#75715e}%{B#272822} {{tag.name}} %{B-}%{F-}
+%{A}
 {% endif %}
-%{T-}
 
 {% endfor %}
