remove scroll through

--- a/polybar.liquid
+++ b/polybar.liquid
@@ -16,7 +16,7 @@
 
 {% endfor %}
 
-%{A1:leftwm-command "NextLayout" :}%{A5:leftwm-command "NextLayout" :}
-%{A3:leftwm-command "PreviousLayout" :}%{A4:leftwm-command "PreviousLayout" :}
+%{A1:leftwm-command "NextLayout" :}
+%{A3:leftwm-command "PreviousLayout" :}
  {{ workspace.layout }} 
-%{A}%{A}%{A}%{A}
+%{A}%{A}
