making it simpler

--- a/polybar.liquid
+++ b/polybar.liquid
@@ -1,15 +1,19 @@
 {% for tag in workspace.tags %}
 
-{% if tag.mine %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+{% if tag.mine %}
+%{A1:leftwm-command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
   
 %{A}
-{% elsif tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+{% elsif tag.visible %}
+%{A1:leftwm-command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
   
 %{A}
-{% elsif tag.busy %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+{% elsif tag.busy %}
+%{A1:leftwm-command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
  {{tag.name}} 
 %{A}
-{% else tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+{% else tag.visible %}
+%{A1:leftwm-command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
 %{F#75715e} {{tag.name}} %{F-}
 %{A}
 {% endif %}
