Revert "making it simpler"
This reverts commit 1b19d84903a21d880e76f091fa3286c8aa2cf576.

--- a/polybar.liquid
+++ b/polybar.liquid
@@ -1,19 +1,18 @@
 {% for tag in workspace.tags %}
 
 {% if tag.mine %}
-%{A1:leftwm-command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
+%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
 %{T2}  %{T-}
 %{A}
 {% elsif tag.visible %}
-%{A1:leftwm-command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
+%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
 %{T2}  %{T-}
 %{A}
 {% elsif tag.busy %}
-%{A1:leftwm-command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
+%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
 %{T2} {{tag.name}} %{T-}
 %{A}
-{% else tag.visible %}
-%{A1:leftwm-command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
+{% else tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
 %{T2}%{F#75715e} {{tag.name}} %{F-}%{T-}
 %{A}
 {% endif %}
