--- a/polybar.liquid
+++ b/polybar.liquid
@@ -16,7 +16,8 @@
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
 %{T3} {{tag.name}} %{T-}
 %{A}
-{% else tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+{% else tag.visible %}
+%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
 %{T3}%{F#75715e} {{tag.name}} %{F-}%{T-}
 %{A}
 {% endif %}
