--- a/polybar.liquid
+++ b/polybar.liquid
@@ -4,23 +4,13 @@
 
 {% for tag in workspace.tags %}
 
-{% if tag.mine %}
-%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{T3}  %{T-}
-%{A}
-{% elsif tag.visible %}
-%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{T3}  %{T-}
-%{A}
-{% elsif tag.busy %}
-%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{T3} {{tag.name}} %{T-}
-%{A}
-{% else tag.visible %}
-%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{T3}%{F#75715e} {{tag.name}} %{F-}%{T-}
-%{A}
+%{T3}
+{% if tag.mine %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}  %{A}
+{% elsif tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}  %{A}
+{% elsif tag.busy %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:} {{tag.name}} %{A}
+{% else tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}%{F#75715e} {{tag.name}} %{F-}%{A}
 {% endif %}
+%{T-}
 
 {% endfor %}
 
