--- a/polybar.liquid
+++ b/polybar.liquid
@@ -5,10 +5,22 @@
 {% for tag in workspace.tags %}
 
 %{T3}
-{% if tag.mine %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}  %{A}
-{% elsif tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}  %{A}
-{% elsif tag.busy %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:} {{tag.name}} %{A}
-{% else tag.visible %}%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}%{F#75715e} {{tag.name}} %{F-}%{A}
+{% if tag.mine %}
+%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+  
+%{A}
+{% elsif tag.visible %}
+%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+  
+%{A}
+{% elsif tag.busy %}
+%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+ {{tag.name}} 
+%{A}
+{% else tag.visible %}
+%{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
+%{F#75715e} {{tag.name}} %{F-}
+%{A}
 {% endif %}
 %{T-}
 
